# kelaode

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: example_momentum.json  sit_etf_rotation_experiment.json  sit_synthetic.json  sit_synthetic_fixed.json  sit_synthetic_walk_forward.json  synthetic_example.json  tsmom_synthetic_fixed.json  tsmom_synthetic_run.json  tsmom_synthetic_walk_forward.json
configs/audit/: tsmom_synthetic_policy.json
configs/legacy/: README.md
configs/validation/: etf9_snapshot_v2_acquisition.json  etf9_snapshot_v2_package_template.json  sit_real_market_fixed.json  sit_real_market_walk_forward.json  sit_validation_policy.json  tsmom_real_market_fixed.json  (+2 more)
data/: github_quant_projects_2026-07-18.json
docs/: experiments.md  github_a_share_quant_landscape.md  mainland_broker_quant_system.md  open_source_strategy_adaptation.md  strategy_sdk.md
scripts/: fetch_github_quant_projects.py
src/kelaode/: core.py  (+24 more)
tests/: test_auditable_execution.py  test_backtest.py  test_core.py  test_experiment.py  test_github_research_snapshot.py  test_market_data.py  test_multi_asset_data.py  test_open_source_rotation.py  test_portfolio.py  test_real_market_validation.py  test_research_black_box.py  test_research_infrastructure.py  test_selection_runner_black_box.py  test_sit_audit.py  test_sit_schema2_integration.py  test_sit_validation.py  test_snapshot_v2.py  test_strategy_sdk.py  test_time_series_trend.py  test_tsmom_real_market_preregistration.py  test_tsmom_schema2_integration.py  test_validation_black_box.py
(+34 files in other folders)
