[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "kelaode"
version = "0.1.0"
description = "Research prototype for a small-capital mainland China broker quant system"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]
data = ["akshare>=1.16", "pandas>=2.1", "pyarrow>=15"]
parquet = ["pandas>=2.1", "pyarrow>=15"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
